handleV4VHiddenElement when popup shows

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,6 +14,8 @@
     "128": "icon-128.png"
   },
   "permissions": [
+    "activeTab",
+    "scripting",
     "storage"
   ],
   "content_scripts": [
