--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,7 +16,8 @@
   "permissions": [
     "activeTab",
     "scripting",
-    "storage"
+    "storage",
+    "webNavigation"
   ],
   "content_scripts": [
     {
