--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hot-loader/react-dom": "17.0.1",
     "crypto-js": "4.1.1",
+    "omniaural": "^1.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0"
