--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "dependencies": {
     "@hot-loader/react-dom": "17.0.1",
     "crypto-js": "4.1.1",
-    "omniaural": "^1.3.3",
+    "omniaural": "1.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hot-loader": "4.13.0"
+    "react-hot-loader": "4.13.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.15.8",
@@ -29,6 +30,7 @@
     "@types/crypto-js": "4.1.0",
     "@types/react": "17.0.33",
     "@types/react-dom": "17.0.10",
+    "@types/uuid": "8.3.3",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "babel-preset-react-app": "10.0.0",
