--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hot-loader/react-dom": "17.0.1",
     "crypto-js": "4.1.1",
     "omniaural": "1.3.3",
+    "qrcode": "1.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
@@ -28,6 +29,7 @@
     "@babel/preset-react": "7.14.5",
     "@types/chrome": "0.0.161",
     "@types/crypto-js": "4.1.0",
+    "@types/qrcode": "1.4.2",
     "@types/react": "17.0.33",
     "@types/react-dom": "17.0.10",
     "@types/uuid": "8.3.3",
